tests-integration/fixtures/checking/131_derive_eq_missing_instance/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
MkNoEq :: NoEq
MkBox :: NoEq -> Box

Types
NoEq :: Type
Box :: Type

Data
NoEq
  Quantified = :0
  Kind = :0

Box
  Quantified = :0
  Kind = :0


Roles
NoEq = []
Box = []

Derived
derive Eq (Box :: Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Eq NoEq
  --> 9:1..9:23
  |
9 | derive instance Eq Box
  | ^~~~~~~~~~~~~~~~~~~~~~
